--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "image-size": "^1.0.2",
     "yaml": "^2.3.4",
     "cos-nodejs-sdk-v5": "^2.12.10",
-    "archiver": "^5.3.2"
+    "archiver": "^5.3.2",
+    "mysql2": "^3.9.7"
   }
 }
