chore: 删除漂流瓶功能代码并添加handlebars依赖
删除不再使用的漂流瓶功能代码，并添加handlebars依赖以支持模板渲染

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "yaml": "^2.3.4",
     "cos-nodejs-sdk-v5": "^2.12.10",
     "archiver": "^5.3.2",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.9.7",
+    "handlebars": "*"
   }
 }
