feat(bot模板): 使用canvas替代puppeteer渲染模板详情图片
移除原有的HTML模板文件，新增canvas渲染逻辑实现模板详情图片生成
添加canvas依赖并实现模板详情图片的绘制和保存功能

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cos-nodejs-sdk-v5": "^2.12.10",
     "archiver": "^5.3.2",
     "mysql2": "^3.9.7",
-    "handlebars": "*"
+    "handlebars": "*",
+    "canvas": "^2.11.0"
   }
 }
